--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,9 @@ body {
 body {
   font-family: "Poppins", sans-serif !important;
 }
+.text-center.Poppins {
+  font-family: inherit !important;
+}
 
 @layer base {
   :root {
@@ -89,5 +92,89 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+.skeleton {
+  animation: skeleton-loading 0.5s ease-in-out infinite alternate;
+  -webkit-animation: skeleton-loading 0.5s ease-in-out infinite alternate;
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(200, 20%, 80%);
+  }
+  100% {
+    background-color: hsl(200, 20%, 95%);
+  }
+}
+
+.swingDiscount {
+  animation: swing 1s ease-in-out infinite alternate;
+  -webkit-animation: swing 1s ease-in-out infinite alternate;
+}
+
+@keyframes swing {
+  0% {
+    transform-origin: top center;
+    transform: rotate(-35deg);
+    -webkit-transform: rotate(-35deg);
+    -moz-transform: rotate(-35deg);
+    -ms-transform: rotate(-35deg);
+    -o-transform: rotate(-35deg);
+  }
+  100% {
+    transform-origin: top center;
+    transform: rotate(35deg);
+    -webkit-transform: rotate(35deg);
+    -moz-transform: rotate(35deg);
+    -ms-transform: rotate(35deg);
+    -o-transform: rotate(35deg);
+  }
+}
+
+.shineCard {
+  /* border: 2px solid #007273; */
+}
+.carMoves {
+  animation: carMove 1s ease-in-out infinite alternate;
+  -webkit-animation: carMove 1s ease-in-out infinite alternate;
+}
+
+@keyframes carMove {
+  0% {
+    transform: translateX(5px);
+    -webkit-transform: translateX(5px);
+    -moz-transform: translateX(5px);
+    -ms-transform: translateX(5px);
+    -o-transform: translateX(5px);
+  }
+  25% {
+    transform: translateX(-5px);
+    -webkit-transform: translateX(-5px);
+    -moz-transform: translateX(-5px);
+    -ms-transform: translateX(-5px);
+    -o-transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(10px);
+    -webkit-transform: translateX(10px);
+    -moz-transform: translateX(10px);
+    -ms-transform: translateX(10px);
+    -o-transform: translateX(10px);
+  }
+  75% {
+    transform: translateX(5px);
+    -webkit-transform: translateX(5px);
+    -moz-transform: translateX(5px);
+    -ms-transform: translateX(5px);
+    -o-transform: translateX(5px);
+  }
+  100% {
+    transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+    -moz-transform: translateX(0px);
+    -ms-transform: translateX(0px);
+    -o-transform: translateX(0px);
   }
 }
